Fix layout issues for character summary

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1,7 +1,7 @@
 /*
  *  Author: Kaleb Jubar
  *  Created: 1 Apr 2024, 2:29:51 PM
- *  Last update: 9 Apr 2024, 10:31:53 AM
+ *  Last update: 9 Apr 2024, 11:04:13 AM
  *  Copyright (c) 2024 Kaleb Jubar
  */
 
@@ -426,14 +426,43 @@ body:has(.main-card.card-lg) #mainHeading {
 /* character summary styles */
 #charSummDisplay {
     width: 100%;
-    flex-grow: 1;
-    border-radius: 5px;
-    display: grid;
-    grid-template-columns: 2fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    gap: 20px;
+    height: 80%;
     padding: 20px;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
     align-items: center;
+    overflow: scroll;
+}
+
+#charSummOperator {
+    flex-basis: 30%;
+}
+
+#charSummOperator > img {
+    width: 100%;
+}
+
+#charSummWeapons {
+    flex-basis: 70%;
+    height: 100%;
+    display: grid;
+    grid-template: 1fr 1fr / 1fr 1fr 1fr;
+    gap: 20px;
+}
+
+#charSummWeapons > .display-card {
+    justify-content: center;
+    align-items: center;
+}
+
+#charSummWeapons .display-img {
+    max-height: 150px;
+}
+
+#charSummWeapons .display-text {
+    margin: 10px;
 }
 
 #charSummTeamName {
@@ -441,16 +470,6 @@ body:has(.main-card.card-lg) #mainHeading {
     padding: 10px 5px;
     border-radius: 5px;
     grid-column-start: 2;
-}
-
-#charSummOperator {
-    grid-row: 1 / 3;
-    grid-column: 1 / 2;
-}
-
-#charSummOperator > img {
-    width: 100%;
-    max-width: 100%;
 }
 
 /* team summary styles */
